--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Local .terraform directories
 .terraform/
 
+*.pem
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
+.terraform.lock.hcl
 
 # Crash log files
 crash.log
